adds links to adis' page

--- a/html/adi-moldovan.html
+++ b/html/adi-moldovan.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Adi Moldovan</h1>
     <div>
+        <a href="../">All team</a>
+    </div>
+    <div>
         <h2>Likes</h2>
         <ol>
             <li>Programming</li>
