--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
         <ul>
             <li>Eduard</li>
-            <li>Adi</li>
+            <li><a href="html/adi-moldovan.html">Adi</a></li>
             <li>Ana Maria</li>
             <li>Elena</li>
             <li>Marius</li>
