added link to Eduard's page

--- a/html/adi-moldovan.html
+++ b/html/adi-moldovan.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Adi Moldovan</h1>
     <div>
-        <a href="../">All team</a>
+      <a href="../">All team</a>
     </div>
     <div>
-        <h2>Likes</h2>
-        <ol>
-            <li>Programming</li>
-            <li>Gaming</li>
-            <li>Rafting</li>
-        </ol>
+      <h2>Likes</h2>
+      <ol>
+        <li>Programming</li>
+        <li>Gaming</li>
+        <li>Rafting</li>
+      </ol>
     </div>
     <div>
-        <h2>Dislikes</h2>
-        <ol>
-            <li>Learnig by heart</li>
-            <li>Broth</li>
-        </ol>
+      <h2>Dislikes</h2>
+      <ol>
+        <li>Learnig by heart</li>
+        <li>Broth</li>
+      </ol>
     </div>
-</body>
+  </body>
 </html>
