--- a/html/eduard-nedelcu.html
+++ b/html/eduard-nedelcu.html
@@ -8,6 +8,9 @@
   <body>
     <h1>Eduard Nedelcu</h1>
     <div>
+      <a href="../">All team</a>
+    </div>
+    <div>
       <h2>Likes</h2>
       <ol>
         <li>Programming</li>
