--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>The team!</h1>
     <div>
-        <ul>
-            <li>Eduard</li>
-            <li><a href="html/adi-moldovan.html">Adi</a></li>
-            <li>Ana Maria</li>
-            <li>Elena</li>
-            <li>Marius</li>
-        </ul>
+      <ul>
+        <li><a href="html/eduard-nedelcu.html">Eduard</a></li>
+        <li><a href="html/adi-moldovan.html">Adi</a></li>
+        <li>Ana Maria</li>
+        <li>Elena</li>
+        <li>Marius</li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
