adds ana's description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul>
         <li><a href="html/eduard-nedelcu.html">Eduard</a></li>
         <li><a href="html/adi-moldovan.html">Adi</a></li>
-        <li>Ana Maria</li>
+        <li><a href="html/ana-tise.html">Ana Maria</a></li>
         <li>Elena</li>
         <li>Marius</li>
       </ul>
